# pystreampu

./: .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  404.html  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml
aff3ct/: __init__.py  _array.py  _bop.py  _delayer.py  _dtype.py  _finalizer.py  _incrementer.py  _initializer.py  _minmax.py  _module.py  _pipeline.py  _probe.py  _red.py  _relayer.py  _reporter.py  _sequence.py  _sink.py  _socket.py  _source.py  _stateless.py  _task.py  _typing.py  _uop.py  rang.py
aff3ct/array/: array.py
aff3ct/bop/: Binaryop.py  __bop_patch__.py  __init__.py
aff3ct/core/: Module.py  Sequence.py  Socket.py  Task.py  __init__.py
aff3ct/jit/: jit.py
aff3ct/test/: conftest.py  test_array.py  test_bop.py  test_uop.py
aff3ct/test/bootstrap/: simple_chain.py  test_do_while_loop.py  test_simple_chain.py  test_simple_pipeline.py
aff3ct/tests/: conftest.py  test_array.py  test_bop.py  test_uop.py
aff3ct/tests/bootstrap/: test_do_while_loop.py  test_exclusive_paths.py  test_for_loop.py  test_simple_chain.py  test_simple_chain_fwd.py  test_simple_chain_hybrid.py  test_simple_pipeline.py
aff3ct/uop/: Unaryop.py  __init__.py  __uop_patch__.py
aff3ct/viz/: style.json  viz.py
back_to_first_steps/: index.html
ci/: coverage-linux.sh
docs/: README.md  back_to_first_steps.ipynb  first_steps.ipynb  index.md  install.md  module.ipynb  reference.md  sequence.ipynb  socket.ipynb  task.ipynb
docs/assets/Tex_files/: src_inc_binding.fdb_latexmk  src_inc_binding.fls  src_inc_binding.tex
docs/source/: aff3ct.rst  conf.py  index.rst
docs/source/_templates/: custom-class-template.rst
first_steps/: index.html
include/: ext.hpp  pyaf.hpp
include/wrapper/Common/: pybind11_common.h  pystreambuf.h
include/wrapper/Common/Rang/: Rang.hpp
include/wrapper/Common/Tools/: type_functions.h  type_list.hpp
include/wrapper/Common/Wrapper_py/: Wrapper_py.hpp
include/wrapper/Module/Adaptor/: Adaptor.hpp  Adaptor_1_to_n.hpp  Adaptor_n_to_1.hpp
include/wrapper/Module/Array/: Array.hpp
include/wrapper/Module/Binaryop/: Binaryop.hpp  Binaryop.hxx
include/wrapper/Module/Controller/: Controller.hpp
include/wrapper/Module/Delayer/: Delayer.hpp  Delayer.hxx
include/wrapper/Module/Finalizer/: Finalizer.hpp  Finalizer.hxx
include/wrapper/Module/Incrementer/: Incrementer.hpp  Incrementer.hxx
include/wrapper/Module/Initializer/: Initializer.hpp  Initializer.hxx
include/wrapper/Module/Iterator/: Iterator.hpp
include/wrapper/Module/Module/: Module.hpp
include/wrapper/Module/Probe/: Probe.hpp
include/wrapper/Module/Range/: Range.hpp  Range.hxx
include/wrapper/Module/Reducer/: Reducer.hpp  Reducer.hxx
include/wrapper/Module/Relayer/: Relayer.hpp  Relayer.hxx
include/wrapper/Module/Set/: Set.hpp
include/wrapper/Module/Sink/: Sink.hpp
include/wrapper/Module/Sleeper/: Sleeper.hpp
include/wrapper/Module/Slicer/: Slicer.hpp  Slicer.hxx
include/wrapper/Module/Source/: Source.hpp
include/wrapper/Module/Stateless/: Stateless.hpp
include/wrapper/Module/Subsequence/: Subsequence.hpp
include/wrapper/Module/Switcher/: Switcher.hpp
include/wrapper/Module/Unaryop/: Unaryop.hpp  Unaryop.hxx
include/wrapper/Runtime/Pipeline/: Pipeline.hpp
include/wrapper/Runtime/Sequence/: Sequence.hpp
include/wrapper/Runtime/Socket/: Socket.hpp  Socket.hxx
include/wrapper/Runtime/Task/: Task.hpp
include/wrapper/Tools/Exception/: Exception.hpp
include/wrapper/Tools/Interface/: Interface_clone.hpp  Interface_get_set_n_frames.hpp  Interface_is_done.hpp  Interface_reset.hpp  Interface_set_seed.hpp  Interface_waiting.hpp
include/wrapper/Tools/Reporter/: Reporter.hpp
include/wrapper/Tools/Signal_handler/: Signal_handler.hpp
include/wrapper/Tools/Terminal/: Terminal.hpp
install/: index.html
module/: index.html
pyaf/: __init__.py
pyaf/array/: array.py
pyaf/bop/: __bop_patch__.py
pyaf/core/: Sequence.py  Socket.py
pyaf/test/: conftest.py  test_array.py  test_bop.py  test_jit.py  test_uop.py
pyaf/uop/: Unaryop.py  __uop_patch__.py
reference/: index.html
scripts/: apply_clang_format.sh
search/: search_index.json
sequence/: index.html
socket/: index.html
src/: ext.cpp  pyaf.cpp
src/wrapper/Common/Wrapper_py/: Wrapper_py.cpp
src/wrapper/Module/Adaptor/: Adaptor.cpp  Adaptor_1_to_n.cpp  Adaptor_n_to_1.cpp
src/wrapper/Module/Array/: Array.cpp
src/wrapper/Module/Binaryop/: Binaryop_Add.cpp  Binaryop_And.cpp  Binaryop_Div.cpp  Binaryop_Eq.cpp  Binaryop_Ge.cpp  Binaryop_Gt.cpp  Binaryop_Le.cpp  Binaryop_Lt.cpp  Binaryop_Max.cpp  Binaryop_Min.cpp  Binaryop_Mul.cpp  Binaryop_Ne.cpp  Binaryop_Or.cpp  Binaryop_Sub.cpp  Binaryop_Xor.cpp
src/wrapper/Module/Controller/: Controller.cpp
src/wrapper/Module/Delayer/: Delayer.cpp
src/wrapper/Module/Finalizer/: Finalizer.cpp
src/wrapper/Module/Incrementer/: Incrementer.cpp
src/wrapper/Module/Initializer/: Initializer.cpp
src/wrapper/Module/Iterator/: Iterator.cpp
src/wrapper/Module/Module/: Module.cpp
src/wrapper/Module/Probe/: Probe.cpp
src/wrapper/Module/Range/: Range.cpp
src/wrapper/Module/Reducer/: Reducer_Add.cpp  Reducer_And.cpp  Reducer_Div.cpp  Reducer_Eq.cpp  Reducer_Ge.cpp  Reducer_Gt.cpp  Reducer_Le.cpp  Reducer_Lt.cpp  Reducer_Ne.cpp  (+6 more)
streampu/: __init__.py  _array.py  _bop.py  _delayer.py  _dtype.py  _finalizer.py  _incrementer.py  _initializer.py  _minmax.py  _module.py  _pipeline.py  _probe.py  _red.py  _relayer.py  _reporter.py  _sequence.py  _sink.py  _socket.py  _source.py  _stateless.py  _task.py  _typing.py  _uop.py  rang.py
streampu/tests/: conftest.py  test_array.py  test_bop.py  test_uop.py
streampu/tests/bootstrap/: test_do_while_loop.py  test_exclusive_paths.py  test_for_loop.py  test_simple_chain.py  test_simple_chain_fwd.py  test_simple_chain_hybrid.py  test_simple_pipeline.py
task/: index.html
tests/: __init__.py  conftest.py  test_array.py
tests/advanced/: full_fwd.dot  test.dot
tests/bootstrap/: graph.dot  test.dot  toto
(+58 files in other folders)
