[build-system]
requires = ["scikit-build-core",
            "cmake",
            "ninja; platform_system!='Windows'",
            ]
build-backend = "scikit_build_core.build"

[project]
name = "streampu"
version = "0.0.1"
authors = [{name = "Romain Tajan", email= "romain.tajan@ims-bordeaux.fr"}]
requires-python = ">=3.8"
description = "Python wrapper for StreamPU library."
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "numpy",
    "multipledispatch",
    "pytest>=6.0"
]

[project.optional-dependencies]
tests = [
  "pytest>=6.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux2014"
build-verbosity = 3
test-requires = "pytest"
test-command = "pytest --pyargs streampu --junitxml=./pyaf-core/report.xml"

[tool.scikit-build]
build-dir = "build"
wheel.packages = ["streampu"]
wheel.license-files = ["LICENSE"]
wheel.install-dir = "streampu"

[tool.flake8]
max-line-length = 120