[build-system]
requires = ["scikit-build-core",
            "cmake",
            "ninja; platform_system!='Windows'",
            ]
build-backend = "scikit_build_core.build"

[project]
name = "streampu"
authors = [{name = "Romain Tajan", email= "romain.tajan@ims-bordeaux.fr"}]
requires-python = ">=3.8"
description = "Python wrapper for StreamPU library."
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "numpy",
    "multipledispatch",
    "pytest>=6.0"
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
  "pytest>=6.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]

[tool.cibuildwheel]
before-all = "uname -a"
manylinux-x86_64-image = "manylinux2014"
build-verbosity = 3
test-requires = "pytest"
test-command = "pytest --pyargs streampu --junitxml=./streampu/report.xml"

[tool.scikit-build]
build-dir = "build"
wheel.packages = ["streampu"]
wheel.license-files = ["LICENSE"]
wheel.install-dir = "streampu"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["streampu/_version.py"]

[tool.setuptools_scm]  # Section required
write_to = "streampu/_version.py"


[[tool.scikit-build.generate]]
path = "streampu/_version.py"
template = '''
version = "${version}"
'''

[tool.isort]
profile = "black"

[tool.black]
line-length = 120